# ChatResume-HR-App

./: Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: Deployment.yaml
src/: app.py  requirements.txt
